# segutil

./: .gitignore  README.md  make_seg_img.py  pyproject.toml  split_train_test.py  train.py
.github/: pull_request_template.md
segmentation/: __init__.py  area_based_sampler.py  transforms.py  visualizations.py
segmentation/balanced_batch/: batch_samplers.py  builder.py  train.py
segmentation/visualizations/: __init__.py  vis_image.py  vis_semantic_segmentation.py
segutil/: metrics.py  segmentaion.py  select_segmentation.py  transforms.py  types.py  visualizations.py
tests/: test_segmentation.py
