[tool.poetry]
name = "segutil"
version = "0.1.0"
description = ""
authors = ["hrsma2i <hrs.ma2i@gmail.com>"]
packages = [{ include = "segutil" }]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
numpy = "^1.20.1"
matplotlib = "^3.3.4"
pycocotools = "^2.0.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
mypy = "^0.812"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
